[Chore] #24: lambda 식 수정